[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kore-mind"
version = "0.5.0"
description = "Persistent memory + emergent identity engine for any LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "iafiscal" },
]
keywords = ["llm", "memory", "identity", "cognitive", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
embeddings = ["numpy>=1.24"]
dev = ["pytest>=7.0", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/kore_mind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
